--- a/1-dars/index.html
+++ b/1-dars/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <script defer async src="./script.js"></script>
-   
+    <script defer src="./another.js"></script>
     <title>Document</title>
 </head>
 <body>
